----------------------------------------------------------------
-- wren gayle romano <wren@community.haskell.org>   ~ 2011.04.17
----------------------------------------------------------------

Name:           stm-chans-bench
Version:        1.2.0
-- Source-Repository requires version 1.6
Cabal-Version:  >= 1.6
Build-Type:     Simple
Stability:      experimental
Copyright:      Copyright (c) 2011 wren gayle romano
License:        BSD3
License-File:   ../../LICENSE
Author:         wren gayle romano
Maintainer:     wren@community.haskell.org
Homepage:       http://code.haskell.org/~wren/
Category:       Concurrency
Synopsis:       Additional types of channels for STM.
Description:    Additional types of channels for STM.

Source-Repository head
    Type:     darcs
    Location: http://community.haskell.org/~wren/stm-chans

----------------------------------------------------------------
Flag threaded
    Default: True
    Description: Compile with support for enabling the use of
        multiple OS threads, in order to take advantage of parallelism
        on a multiprocessor or multicore machine. Note that this
        flag is not required in order to enable (single OS-threaded)
        concurrency of Haskell lightweight threads. This pases
        -threaded to GHC which enables various RTS flags for 
        configuring the number of OS threads, etc.

----------------------------------------------------------------
Executable bench-TBChan
    GHC-Options: -fforce-recomp
    if flag(threaded)
        GHC-Options: -threaded
    
    Build-Depends: base      >= 4.1 && < 5
                 , stm       >= 2.1.1
                 , stm-chans >= 1.2.0
                 , criterion >= 0.5.0
    
    Hs-Source-Dirs: .
    Main-Is:        TBChanBench.hs
    GHC-Options:    -main-is TBChanBench.main

----------------------------------------------------------------
----------------------------------------------------------- fin.
